# archetype-rust-tokio-basic

./: README.md  archetype.yaml
contents/{{ app_name }}/: Cargo.toml  README.md
contents/{{ app_name }}/src/: lib.rs
contents/{{ app_name }}/src/config/: mod.rs
