[package]
name = "{{ app_name }}"
version = "0.1.0"
authors = ["{{ author_full }}"]
edition = "2018"
license = "MIT"
description = "{{ description }}"

[[bin]]
name = "{{ app-name }}"
path = "src/bin/{{ app_name }}.rs"

[dependencies]
async-trait = "0.1.42"
clap = "2"
indoc = "0.3"
log = "0.4"
loggerv = "0.7"
futures = "0.3"
tokio = { version = "0.3", features = ["full"] }
